// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui controller renders card sets correctly 1`] = `"<section class=\\"row button-row-0\\"><button class=\\"btn-sm btn-dark\\" type=\\"button\\"></button><button class=\\"btn-sm btn-dark\\" type=\\"button\\"></button><button class=\\"btn-sm btn-dark\\" type=\\"button\\"></button><button class=\\"btn-sm btn-dark\\" type=\\"button\\"></button></section><section class=\\"row button-row-1\\"><button class=\\"btn-sm btn-dark\\" type=\\"button\\"></button><button class=\\"btn-sm btn-dark\\" type=\\"button\\"></button><button class=\\"btn-sm btn-dark\\" type=\\"button\\"></button><button class=\\"btn-sm btn-dark\\" type=\\"button\\"></button></section><section class=\\"row button-row-2\\"><button class=\\"btn-sm btn-dark\\" type=\\"button\\"></button></section>"`;

exports[`ui controller renders cleanup correctly 1`] = `
"
            <h2>Clean Up</h2>
            <h4>Bystanders</h4>
            <p class=\\"bystanders\\">33</p>
            <h4>Wounds</h4>
            <p class=\\"wounds\\">30</p>
            <h4>Bindings</h4>
            <p class=\\"bindings\\">0</p>
            <h4>Shards</h4>
            <p class=\\"shards\\">18</p>
            <h4>Sidekicks</h4>
            <p class=\\"sidekicks\\">15</p>
            <h4>Ambitions</h4>
            <p class=\\"ambitions\\">30</p>
        "
`;

exports[`ui controller renders cleanup reset correctly 1`] = `
"
            <h2>Clean Up</h2>
            <h4>Bystanders</h4>
            <p class=\\"bystanders\\"></p>
            <h4>Wounds</h4>
            <p class=\\"wounds\\"></p>
            <h4>Bindings</h4>
            <p class=\\"bindings\\"></p>
            <h4>Shards</h4>
            <p class=\\"shards\\"></p>
            <h4>Sidekicks</h4>
            <p class=\\"sidekicks\\"></p>
            <h4>Ambitions</h4>
            <p class=\\"ambitions\\"></p>
        "
`;

exports[`ui controller renders form reset correctly 1`] = `
"
        
            <div class=\\"scheme-container\\">
                <h4 class=\\"text-danger\\">Scheme</h4>
                <p class=\\"text-danger scheme\\"></p>
            </div>
            
            <div class=\\"mastermind-container\\">
                <h4>Mastermind</h4>
                <p class=\\"mastermind\\"></p>
            </div>
            
            <div class=\\"villains-container\\">
                <h4 class=\\"text-danger\\">Villains</h4>
                <ul class=\\"villains row\\"></ul>
            </div>
            
            <div class=\\"heroes-container\\">
                <h4>Heroes</h4>
                <ul class=\\"heroes row\\"></ul>
            </div>
            
        "
`;

exports[`ui controller renders setup correctly 1`] = `
"
        
            <div class=\\"scheme-container\\">
                <h4 class=\\"text-danger\\">Scheme</h4>
                <p class=\\"text-danger scheme\\">
        <p class=\\"text-danger\\">Pull Reality into the Negative Zone</p>
        <img src=\\"../img/legendary-nick-fury.png\\">
    </p>
            </div>
            
            <div class=\\"mastermind-container\\">
                <h4>Mastermind</h4>
                <p class=\\"mastermind\\">
        <p class=\\"\\">Galactus</p>
        <img src=\\"../img/legendary-iron-man.png\\">
    </p>
            </div>
            
            <div class=\\"villains-container\\">
                <h4 class=\\"text-danger\\">Villains</h4>
                <ul class=\\"villains row\\">
            <div class=\\"col-sm\\">
                <p class=\\"image-label text-danger\\">Heralds of Galactus</p>
                <img src=\\"../img/legendary-captain-america.png\\">
            </div>   
        
            <div class=\\"col-sm\\">
                <p class=\\"image-label text-danger\\">Subterranea</p>
                <img src=\\"../img/legendary-captain-america.png\\">
            </div>   
        
            <div class=\\"col-sm\\">
                <p class=\\"image-label text-danger\\">Skrulls</p>
                <img src=\\"../img/legendary-captain-america.png\\">
            </div>   
        
            <div class=\\"col-sm\\">
                <p class=\\"image-label text-danger\\">Doombot Legion</p>
                <img src=\\"../img/legendary-captain-america.png\\">
            </div>   
        
            <div class=\\"col-sm\\">
                <p class=\\"image-label text-danger\\">Savage Land Mutates</p>
                <img src=\\"../img/legendary-captain-america.png\\">
            </div>   
        </ul>
            </div>
            
            <div class=\\"heroes-container\\">
                <h4>Heroes</h4>
                <ul class=\\"heroes row\\">
            <div class=\\"col-sm\\">
                <p class=\\"image-label\\">Mr. Fantastic</p>
                <img src=\\"../img/legendary-cyclops.png\\">
            </div>   
        
            <div class=\\"col-sm\\">
                <p class=\\"image-label\\">Invisible Woman</p>
                <img src=\\"../img/legendary-cyclops.png\\">
            </div>   
        
            <div class=\\"col-sm\\">
                <p class=\\"image-label\\">Human Torch</p>
                <img src=\\"../img/legendary-cyclops.png\\">
            </div>   
        
            <div class=\\"col-sm\\">
                <p class=\\"image-label\\">Thing</p>
                <img src=\\"../img/legendary-cyclops.png\\">
            </div>   
        
            <div class=\\"col-sm\\">
                <p class=\\"image-label\\">Spider-Man</p>
                <img src=\\"../img/legendary-cyclops.png\\">
            </div>   
        </ul>
            </div>
            
        "
`;
